Fix Spring Security JWT Authentication Issues